[tool.poetry]
name = "datastruct"
version = "0.1.0"
description = ""
authors = ["ALexd-78 <alexd-78@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
poetry = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
